# GustoBot

./: .env.example  .gitignore  .gitignore.md  .mailmap  CLAUDE.md  Dockerfile  FINAL_VERIFICATION.md  LANGGRAPH_MIGRATION.md  LIGHTRAG_DATA_INIT.md  LIGHTRAG_FIXES.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  TEST_REPORT.md  agent_routing_test_report.md  an  api_interface_analysis.md  batch_import_simple.py  build-with-lightrag.sh  check_milvus_data.py  create_pgvector_table.sql  docker-compose.yml  final_test_report.md  generate_pgvector_sql.py  historical_recipes.json  import_batch_correct.py  import_excel_to_pgvector.py  import_historical_recipes.py  import_historical_recipes.sql  import_historical_to_milvus.py  import_history_data.py  import_to_postgres.py  init_pgvector_simple.py  insert_pgvector.sql  insert_pgvector_simple.py  insert_to_pgvector.py  kb_config_update_test_report.md  kb_query_final_test_report.md  (+38 more)
.claude/: settings.local.json
app/: __init__.py  main.py
data/: excipients.json  init_mysql.sql  insert_sample_data.sql  历史菜谱源头.xlsx
docs/: AGENT_TEST_REPORT.md  CONFIG_SUMMARY.md  DEPLOYMENT.md  DOCKER_BUILD_LIGHTRAG.md  INTEGRATION_SUMMARY.md  INTEGRATION_VERIFICATION.md  LIGHTRAG_DATA_INIT.md  LIGHTRAG_SERVICE_IMPLEMENTATION.md  QA_TEST_RESULTS.md  QUICK_START.md  README.md  README_CHATBOT.md  README_DEV.md  ROUTER_PROMPT_FIX.md  SESSION_CHANGES_SUMMARY.md  SESSION_MANAGEMENT.md  SYSTEM_TEST_REPORT.md  TESTING_COMMANDS.md  TEST_REPORT.md  TEXT2SQL_IMPLEMENTATION.md  agent_routing_flowchart.md  anti_scraping_guide.md  (+16 more)
(+507 files in other folders)
